[gd_scene load_steps=4 format=2]

[ext_resource path="res://addons/anima/visual-editor/shared/AnimaButton.tscn" type="PackedScene" id=1]
[ext_resource path="res://addons/anima/visual-editor/shared/AnimaMenuButton.gd" type="Script" id=2]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.0196078, 0.266667, 0.368627, 1 )
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color( 0.00784314, 0.14902, 0.207843, 1 )
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8
shadow_size = 2
shadow_offset = Vector2( 2, 2 )

[node name="MenuButton" instance=ExtResource( 1 )]
script = ExtResource( 2 )
__meta__ = {
"__initial_AnimaNode__anima_1089089038415726807__button_bg": {
"percentage": 0,
"value": Color( 0.0196078, 0.266667, 0.368627, 1 )
},
"__initial_AnimaNode__anima_1089089038415726807_opacity": {
"percentage": 0,
"value": 1.0
},
"__initial_AnimaNode__anima_1109358829504410889__button_bg": {
"percentage": 0,
"value": Color( 0.0196078, 0.266667, 0.368627, 1 )
},
"__initial_AnimaNode__anima_1109358829504410889_opacity": {
"percentage": 0,
"value": 1.0
},
"__initial_AnimaNode__anima_1109358829504410889_scale": {
"percentage": 0,
"value": Vector2( 1, 1 )
},
"__initial_AnimaNode__anima_1184046554139278564__button_bg": {
"percentage": 0,
"value": Color( 0.0196078, 0.266667, 0.368627, 1 )
},
"__initial_AnimaNode__anima_1184046554139278564_opacity": {
"percentage": 0,
"value": 1.0
},
"__initial_AnimaNode__anima_1199797368124862305__button_bg": {
"percentage": 0,
"value": Color( 0.0196078, 0.266667, 0.368627, 1 )
},
"__initial_AnimaNode__anima_1199797368124862305_opacity": {
"percentage": 0,
"value": 1.0
},
"__initial_AnimaNode__anima_1199797368124862305_scale": {
"percentage": 0,
"value": Vector2( 1, 1 )
},
"__initial_AnimaNode__anima_1340607361553487793__button_bg": {
"percentage": 0,
"value": Color( 0.0196078, 0.266667, 0.368627, 1 )
},
"__initial_AnimaNode__anima_1340607361553487793_opacity": {
"percentage": 0,
"value": 1.0
},
"__initial_AnimaNode__anima_1441945957727123779__button_bg": {
"percentage": 0,
"value": Color( 0.0196078, 0.266667, 0.368627, 1 )
},
"__initial_AnimaNode__anima_1441945957727123779_opacity": {
"percentage": 0,
"value": 1.0
},
"__initial_AnimaNode__anima_1441945957727123779_scale": {
"percentage": 0,
"value": Vector2( 1, 1 )
},
"__initial_AnimaNode__anima_164700612275147168__button_bg": {
"percentage": 0,
"value": Color( 0.0196078, 0.266667, 0.368627, 1 )
},
"__initial_AnimaNode__anima_164700612275147168_opacity": {
"percentage": 0,
"value": 1.0
},
"__initial_AnimaNode__anima_1658482992875293945__button_bg": {
"percentage": 0,
"value": Color( 0.0196078, 0.266667, 0.368627, 1 )
},
"__initial_AnimaNode__anima_1658482992875293945_opacity": {
"percentage": 0,
"value": 1.0
},
"__initial_AnimaNode__anima_1663072209510023438__button_bg": {
"percentage": 0,
"value": Color( 0.0196078, 0.266667, 0.368627, 1 )
},
"__initial_AnimaNode__anima_1663072209510023438_opacity": {
"percentage": 0,
"value": 1.0
},
"__initial_AnimaNode__anima_215925900549246643__button_bg": {
"percentage": 0,
"value": Color( 0.0196078, 0.266667, 0.368627, 1 )
},
"__initial_AnimaNode__anima_215925900549246643_opacity": {
"percentage": 0,
"value": 1.0
},
"__initial_AnimaNode__anima_244386363034037598__button_bg": {
"percentage": 0,
"value": Color( 0.0196078, 0.266667, 0.368627, 1 )
},
"__initial_AnimaNode__anima_244386363034037598_opacity": {
"percentage": 0,
"value": 1.0
},
"__initial_AnimaNode__anima_359789769654524719__button_bg": {
"percentage": 0,
"value": Color( 0.0196078, 0.266667, 0.368627, 1 )
},
"__initial_AnimaNode__anima_359789769654524719_opacity": {
"percentage": 0,
"value": 1.0
},
"__initial_AnimaNode__anima_447088250819550293__button_bg": {
"percentage": 0,
"value": Color( 0.0196078, 0.266667, 0.368627, 1 )
},
"__initial_AnimaNode__anima_447088250819550293_opacity": {
"percentage": 0,
"value": 1.0
},
"__initial_AnimaNode__anima_447088250819550293_scale": {
"percentage": 0,
"value": Vector2( 1, 1 )
},
"__initial_AnimaNode__anima_454360864891194458__button_bg": {
"percentage": 0,
"value": Color( 0.0196078, 0.266667, 0.368627, 1 )
},
"__initial_AnimaNode__anima_454360864891194458_opacity": {
"percentage": 0,
"value": 1.0
},
"__initial_AnimaNode__anima_454360864891194458_scale": {
"percentage": 0,
"value": Vector2( 1, 1 )
},
"__initial_AnimaNode__anima_503159164245518066__button_bg": {
"percentage": 0,
"value": Color( 0.0196078, 0.266667, 0.368627, 1 )
},
"__initial_AnimaNode__anima_503159164245518066_opacity": {
"percentage": 0,
"value": 1.0
},
"__initial_AnimaNode__anima_503159164245518066_scale": {
"percentage": 0,
"value": Vector2( 1, 1 )
},
"__initial_AnimaNode__anima_541279795408501465__button_bg": {
"percentage": 0,
"value": Color( 0.0196078, 0.266667, 0.368627, 1 )
},
"__initial_AnimaNode__anima_541279795408501465_opacity": {
"percentage": 0,
"value": 1.0
},
"__initial_AnimaNode__anima_611141024203869141__button_bg": {
"percentage": 0,
"value": Color( 0.0196078, 0.266667, 0.368627, 1 )
},
"__initial_AnimaNode__anima_611141024203869141_opacity": {
"percentage": 0,
"value": 1.0
},
"__initial_AnimaNode__anima_611141024203869141_scale": {
"percentage": 0,
"value": Vector2( 1, 1 )
},
"__initial_AnimaNode__anima_625146128990218994__button_bg": {
"percentage": 0,
"value": Color( 0.0196078, 0.266667, 0.368627, 1 )
},
"__initial_AnimaNode__anima_625146128990218994_opacity": {
"percentage": 0,
"value": 1.0
},
"__initial_AnimaNode__anima_647142782613271851__button_bg": {
"percentage": 0,
"value": Color( 0.0196078, 0.266667, 0.368627, 1 )
},
"__initial_AnimaNode__anima_647142782613271851_opacity": {
"percentage": 0,
"value": 1.0
},
"__initial_AnimaNode__anima_698052055760981323__button_bg": {
"percentage": 0,
"value": Color( 0.0196078, 0.266667, 0.368627, 1 )
},
"__initial_AnimaNode__anima_698052055760981323_opacity": {
"percentage": 0,
"value": 1.0
},
"__initial_AnimaNode__anima_774037851557249634__button_bg": {
"percentage": 0,
"value": Color( 0.0196078, 0.266667, 0.368627, 1 )
},
"__initial_AnimaNode__anima_774037851557249634_opacity": {
"percentage": 0,
"value": 1.0
},
"__initial_AnimaNode__anima_774037851557249634_scale": {
"percentage": 0,
"value": Vector2( 1, 1 )
},
"__initial_AnimaNode__anima_807775977158753784__button_bg": {
"percentage": 0,
"value": Color( 0.0196078, 0.266667, 0.368627, 1 )
},
"__initial_AnimaNode__anima_807775977158753784_opacity": {
"percentage": 0,
"value": 1.0
},
"__initial_AnimaNode__anima_8113687285780011__button_bg": {
"percentage": 0,
"value": Color( 0.0196078, 0.266667, 0.368627, 1 )
},
"__initial_AnimaNode__anima_8113687285780011_opacity": {
"percentage": 0,
"value": 1.0
},
"__initial_AnimaNode__anima_838497898335865356__button_bg": {
"percentage": 0,
"value": Color( 0.0196078, 0.266667, 0.368627, 1 )
},
"__initial_AnimaNode__anima_838497898335865356_opacity": {
"percentage": 0,
"value": 1.0
},
"__initial_AnimaNode__anima_838497898335865356_scale": {
"percentage": 0,
"value": Vector2( 1, 1 )
},
"__initial_AnimaNode__anima_840572761080846802__button_bg": {
"percentage": 0,
"value": Color( 0.0196078, 0.266667, 0.368627, 1 )
},
"__initial_AnimaNode__anima_840572761080846802_opacity": {
"percentage": 0,
"value": 1.0
},
"__initial_AnimaNode__anima_840572761080846802_scale": {
"percentage": 0,
"value": Vector2( 1, 1 )
},
"__initial_AnimaNode__anima_871971128971702881__button_bg": {
"percentage": 0,
"value": Color( 0.0196078, 0.266667, 0.368627, 1 )
},
"__initial_AnimaNode__anima_871971128971702881_opacity": {
"percentage": 0,
"value": 1.0
},
"__initial_AnimaNode__anima_871971128971702881_scale": {
"percentage": 0,
"value": Vector2( 1, 1 )
},
"__initial_AnimaNode__anima_944680552210345459__button_bg": {
"percentage": 0,
"value": Color( 0.0196078, 0.266667, 0.368627, 1 )
},
"__initial_AnimaNode__anima_944680552210345459_opacity": {
"percentage": 0,
"value": 1.0
},
"__initial_AnimaNode__anima_944680552210345459_scale": {
"percentage": 0,
"value": Vector2( 1, 1 )
},
"__initial_Button__button_bg": Color( 0.0196078, 0.266667, 0.368627, 1 ),
"__initial_MenuButton__button_bg": Color( 0.0196078, 0.266667, 0.368627, 1 ),
"__visibility_strategy": 0,
"_visibility_strategy_reverted": true
}
show_panel_on = 0

[node name="Timer" type="Timer" parent="." index="2"]
wait_time = 0.2
one_shot = true

[node name="PanelItems" type="PopupPanel" parent="." index="3"]
offset_right = 16.0
offset_bottom = 16.0
custom_styles/panel = SubResource( 1 )

[connection signal="mouse_entered" from="." to="." method="_on_Button_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_Button_mouse_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
